# boostr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  test.yml
examples/: inspect_kokoro.rs  load_kokoro.rs  synth_kokoro.rs
src/: error.rs  lib.rs
src/data/: collate.rs  dataset.rs  loader.rs  mmap.rs  mod.rs  sharded.rs
src/distributed/: bucket_manager.rs  bucket_manager_tests.rs  bucketed_trainer.rs  comm_utils.rs  fused_optimizer.rs  grad_sync.rs  mod.rs  parallel_embedding.rs  pipeline_parallel.rs  tensor_parallel.rs  trainer.rs  zero.rs  zero2.rs  zero2_trainer.rs  zero3.rs  zero3_trainer.rs  zero_base.rs  zero_trainer.rs  zero_trainer_base.rs
src/distributed/inference/: kv_serialize.rs  kv_serialize_paged.rs  leader.rs  mod.rs  pipeline.rs  topology.rs  transport.rs  worker.rs
src/distributed/pipeline/: clock.rs  mod.rs  schedule_1f1b.rs  schedule_interleaved.rs  stage.rs
src/distributed/training/: bucket_manager.rs  bucketed_trainer.rs  fused_optimizer.rs  mod.rs  zero.rs  zero2.rs  zero3.rs  zero_trainer.rs
src/format/: device_map.rs  gguf_tokenizer.rs  mod.rs  safetensors.rs  safetensors_loader.rs  safetensors_name_map.rs  safetensors_tests.rs
src/format/gguf/: io.rs  metadata.rs  mod.rs  name_map.rs  reader.rs  reader_tests.rs  tensor_info.rs  types.rs  value.rs
src/format/torch_pt/: api.rs  io.rs  mod.rs  pickle.rs  reader.rs  reduce.rs  types.rs
src/inference/: decode_graph.rs  kv_cache.rs  mod.rs  ssm_state.rs
src/inference/kv_cache/: basic.rs  layered.rs  paged.rs
src/inference/memory/: block_allocator.rs  block_table.rs  gpu_block_allocator.rs  mod.rs
src/inference/prefix_cache/: core.rs  gpu_cache.rs  gpu_radix.rs  mod.rs  types.rs
src/inference/scheduler/: core.rs  mod.rs  types.rs
src/inference/speculative/: executor.rs  executor_tests.rs  mod.rs  types.rs
src/model/: config.rs  mod.rs  registry.rs  registry_inference.rs  traits.rs
src/model/audio/: fft.rs  g2p.rs  mel.rs  mod.rs  reflection_pad.rs  stft.rs  tts_bundle.rs  wav_encode.rs  whisper.rs  whisper_loader.rs  whisper_model.rs
src/model/config/: attention.rs  audio.rs  huggingface.rs  hybrid.rs  mod.rs  moe.rs  ssm.rs  tts.rs  universal.rs  vision.rs
src/model/detection/: detect.rs  detectors.rs  mod.rs  types.rs
src/model/encoder/: config.rs  config_gguf.rs  mod.rs  model.rs  pipeline.rs  pipeline_tests.rs
src/model/hybrid/: blocks.rs  mod.rs  model.rs
src/model/llama/: block_tp.rs  mod.rs  model.rs  model_tp.rs
src/model/mamba/: mamba2.rs  mod.rs  model.rs  ssm.rs
src/model/multimodal/: input.rs  mod.rs  model.rs
src/model/vision/: clip.rs  image_embedder.rs  mod.rs  preprocess.rs  projector.rs  siglip.rs
src/nn/: activation.rs  adain.rs  conv1d.rs  conv2d.rs  dropout.rs  embedding.rs  groupnorm.rs  layernorm.rs  linear.rs  lora.rs  loss.rs  lstm.rs  mla.rs  mod.rs  module.rs  rmsnorm.rs  rope.rs  stochastic_depth.rs  var_builder.rs  var_ops.rs  varmap.rs  weight.rs  weight_norm.rs
src/nn/loss/: contrastive.rs  cross_entropy.rs  focal.rs  helpers.rs  kl_div.rs  mod.rs  mse.rs
src/nn/moe/: expert.rs  layer.rs  mod.rs  router.rs
src/ops/: autograd_attention.rs  mod.rs
src/optimizer/: adagrad.rs  adamw.rs  grad_accumulator.rs  grad_clip.rs  grad_scaler.rs  lamb.rs  lr_schedule.rs  mod.rs  sgd.rs  traits.rs
src/quant/: format.rs  mod.rs  tables.rs  tensor.rs
src/trainer/: amp.rs  async_checkpoint.rs  checkpoint.rs  config.rs  distributed_checkpoint.rs  mod.rs  simple.rs  test_helpers.rs
tests/: attention.rs  backend_parity_all.rs  bert_varlen.rs  encoder_cuda_graph.rs  encoder_varlen_gpu_acceptance.rs  gemma_varlen.rs  gemma_varlen_gpu_acceptance.rs  mla.rs  nomic_varlen.rs  perf_diag.rs  prefix_cache.rs  rope_backward.rs  scheduler.rs  trainer.rs  varlen_bwd_cuda.rs  varlen_gqa_cuda.rs  varlen_hd256_cuda.rs  xlm_roberta.rs
tests/backend_parity/: alibi.rs  attention.rs  calibration.rs  fused_fp8.rs  fused_optimizer.rs  fused_qkv.rs  helpers.rs  kv_cache.rs  kv_cache_quant.rs  mla.rs  mod.rs  moe.rs  paged_attention.rs  quant_fused.rs  quant_int4_gemm.rs  quant_matmul_q4k.rs  quant_nf4.rs  rope.rs  rope_packed.rs  speculative.rs  ssm_kernels.rs  varlen_attention.rs
(+462 files in other folders)
