[package]
name = "boostr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "ML framework built on numr - attention, quantization, model architectures"
license = "Apache-2.0"
repository = "https://github.com/ml-rust/boostr"
documentation = "https://docs.rs/boostr"
keywords = [
  "machine-learning",
  "deep-learning",
  "transformer",
  "inference",
  "quantization",
]
categories = ["science", "mathematics"]

[dependencies]
numr = "0.5.0"
half = "2"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Optional: CUDA backend
cudarc = { version = "0.19", optional = true, features = [
  "cuda-version-from-build-system",
] }

# Optional: WebGPU backend
wgpu = { version = "28.0", optional = true }
bytemuck = { version = "1.24", features = ["derive"], optional = true }

memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"

[features]
default = ["cpu"]

# Backend features (passed through to numr)
cpu = []
cuda = ["numr/cuda", "dep:cudarc"]
nccl = ["numr/nccl"]
wgpu = ["numr/wgpu", "dep:wgpu", "dep:bytemuck"]

# Precision features
f16 = ["numr/f16"]
fp8 = ["numr/fp8"]

[package.metadata.docs.rs]
no-default-features = true
